src/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>echosign_dev1__Copy_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should EchoSign copy the first Contact recipient’s Account lookup to the Agreement’s Account lookup?</inlineHelpText>
        <label>Copy Contact Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Copy_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should EchoSign copy the first Contact recipient’s Opportunity lookup to the Agreement’s Opportunity lookup?</inlineHelpText>
        <label>Copy Contact Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Create_If_Not_Found__c</fullName>
        <inlineHelpText>Specifies which Recipient type to create (Contact / Lead) in case no existing recipients (as specified in the Recipient Lookup Order) were found.</inlineHelpText>
        <label>Auto Create Recipient Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Email_Domain_Ignore_List__c</fullName>
        <inlineHelpText>If a recipient email address belongs to one of these email domains, no Recipient Object matching (as specified in the Recipient Lookup Order) will be performed and the recipient will be stored as email address.</inlineHelpText>
        <label>Recipient Lookup Domain Ignore List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Types__c</fullName>
        <inlineHelpText>Determines the order for searching for a matching Recipient Object. E.g. If the value of this setting is ‘Contact, Lead, User’,  we will first try finding a Contact with the recipient’s email address, then a Lead and then a User.</inlineHelpText>
        <label>Recipient Lookup Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Adobe Sign Push Mapping Settings</label>
</CustomObject>